correccion-graficos-enlaceestudent
correccion-graficos-enlaceestudent

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <div class="sub-container1">
         <select name="select-sede" id="select-sede">
           <option value="">SELECCIONE SEDE</option>
-          <option value="AQP">AREQUIPA</option>
-          <option value="CDMX">CIUDAD DE MEXICO</option>
           <option value="LIM">LIMA</option>
+          <option value="AQP">AREQUIPA</option>
           <option value="SCL">SANTIAGO DE CHILE</option>
+          <option value="CDMX">CIUDAD DE MEXICO</option>
         </select>
         <select name="select-prom" id="select-prom">
           <option value="showProm()">SELECCIONE PROMOCIÓN</option>
@@ -60,13 +60,14 @@
             <span class="sub-titles">NET PROMOTOR SCORE</span>
             <div class="graphic-container">
               <div class='row'>
-               <div class='col-nd-6' style="height:50px;width:300px">
+               <div class='col-nd-6' >
                  <h2>Gráfico lineal NPS</h2>
                  <hr>
                  <div id="myfirstchart"></div>
                </div>
               </div>
             </div>
+
             <div class="graphic-container">
               <div class='col-nd-6'>
                   <h2>Grafico circular NPS</h2>
@@ -82,7 +83,7 @@
                <div class='col-nd-6' style="height:50px;width:300px">
                  <h2>Gráfico lineal Students Status</h2>
                  <hr>
-                 <div id="myfirstchart"></div>
+                 <div id="graphics-students-bar"></div>
                </div>
               </div>
             </div>
@@ -90,7 +91,7 @@
               <div class='col-nd-6'>
                   <h2>Grafico circular Students Status</h2>
                   <hr>
-                  <div id="mychart" style="height: 200px;width:300px"></div>
+                  <div id="graphic-students-donus" style="height: 200px;width:300px"></div>
               </div>
             </div>
          </div>
@@ -101,7 +102,7 @@
              <div class='col-nd-6' style="height:50px;width:300px">
                <h2>Gráfico lineal Teacher Rating</h2>
                <hr>
-               <div id="myfirstchart"></div>
+               <div id=""></div>
              </div>
             </div>
           </div>
@@ -109,7 +110,7 @@
             <div class='col-nd-6'>
                 <h2>Grafico circular Teacher Rating </h2>
                 <hr>
-                <div id="mychart" style="height: 200px;width:300px"></div>
+                <div id="" style="height: 200px;width:300px"></div>
             </div>
           </div>
 
@@ -121,7 +122,7 @@
              <div class='col-nd-6' style="height:50px;width:300px">
                <h2>Gráfico lineal Jedi Master Rating</h2>
                <hr>
-               <div id="myfirstchart"></div>
+               <div id=""></div>
              </div>
             </div>
           </div>
@@ -129,7 +130,7 @@
             <div class='col-nd-6'>
                 <h2>Grafico circular Jedi Master Rating</h2>
                 <hr>
-                <div id="mychart" style="height: 200px;width:300px"></div>
+                <div id="" style="height: 200px;width:300px"></div>
             </div>
           </div>
         </div>
@@ -142,11 +143,10 @@
         <div class="sub-container1">
           <select name="select-sede" id="select-sede">
             <option value="">SELECCIONE SEDE</option>
-            <option value="AQP">AREQUIPA</option>
-            <option value="CDMX">CIUDAD DE MEXICO</option>
             <option value="LIM">LIMA</option>
+            <option value="AQP">AREQUIPA</option>
             <option value="SCL">SANTIAGO DE CHILE</option>
-            
+            <option value="CDMX">CIUDAD DE MEXICO</option>
           </select>
           <select name="select-prom" id="select-prom">
             <option value="showProm()">SELECCIONE PROMOCIÓN</option>
